iss #1410: Fix video z-index cover footer links
Add position relative for footer block

--- a/public/sass/blocks/contact.scss
+++ b/public/sass/blocks/contact.scss
@@ -3,6 +3,7 @@
 // Styles for contact form
 
 .contact {
+  position: relative;
   padding-top: 70px;
   padding-bottom: 50px;
   background: #e4e2e2;
